fix: modal overflowing on y axis

--- a/client/src/style/Modal.css
+++ b/client/src/style/Modal.css
@@ -29,6 +29,8 @@
     border-radius: 15px;
     height: 27rem;
     width: 40rem;
+    max-height: calc(100vh - 210px);
+    overflow-y: auto;
 }
 
 .modalContent {
